--- a/blog/public/common/styles.css
+++ b/blog/public/common/styles.css
@@ -64,6 +64,15 @@ b{ font-weight: 700; }
 
 img{ width: 100%; }
 
+.fotke{
+	width: 300px;
+	height: 300px;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
+	margin-left: 38%;
+}
+
 li{ list-style: none; display: inline-block; line-height: 1.6; font-size: .9em; }
 
 span{ display: inline-block; }
@@ -345,6 +354,34 @@ header .main-menu li.drop-down a.mouseover + ul.drop-down-menu{ display: block;
 	.font-sm-13{ font-size: 1.3em; }
 }
 
+.form-dark{
+	width: 50%;
+}
+.form-dark .md-form label {
+  color: #fff;
+}
+.form-dark input[type=text]:focus:not([readonly]) {
+  border-bottom: 1px solid #00C851;
+  -webkit-box-shadow: 0 1px 0 0 #00C851;
+  box-shadow: 0 1px 0 0 #00C851;
+}
+.form-dark input[type=text]:focus:not([readonly]) + label {
+  color: #fff;
+}
+.form-dark textarea.md-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #00C851;
+  box-shadow: 0 1px 0 0 #00C851;
+  color: #fff;
+}
+.form-dark textarea.md-textarea  {
+  color: #fff;
+}
+.form-dark .form-control, .form-dark .form-control:focus {
+  color: #fff;
+}
+.form-dark .md-form textarea.md-textarea:focus:not([readonly])+label {
+  color: #fff;
+}
 
 /* COLOR */
 
